<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="CommandDetailsActivity">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutPaySection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/client_informations"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fullname"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="15sp"
                        android:layout_weight="3"/>

                    <TextView
                        android:id="@+id/clientName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="15sp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="15sp"
                        android:layout_weight="3"/>

                    <TextView
                        android:id="@+id/clientPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="15sp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="15sp"
                        android:layout_weight="3"/>

                    <TextView
                        android:id="@+id/clientLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="15sp"
                        android:layout_weight="1"/>

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/textHeading2" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewProductsOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            tools:itemCount="3"
            tools:listitem="@layout/order_product_template" />


        <Button
            android:id="@+id/buttonDeliveryOrder"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/delivery_is_done"
            android:background="@drawable/botton_bg"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycleViewProductsOrder"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayoutPaySection"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:visibility="visible"
    android:padding="5dp"
    android:elevation="15dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="13dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Sub-Total: "
                    android:textSize="19sp"
                    android:layout_marginStart="9dp" />

                <TextView
                    android:id="@+id/priceSubTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_marginStart="15dp"
                    android:text="195,00"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mad"
                    android:layout_marginStart="5dp"
                    android:textSize="19sp"
                    android:fontFamily="@font/poppins_semibold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginStart="9dp"
                    android:text="Livraison : "
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/livraisonPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50,00"
                    android:layout_marginStart="21dp"
                    android:textSize="19sp"
                    android:fontFamily="@font/poppins_semibold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/mad"
                    android:textSize="19sp"
                    android:fontFamily="@font/poppins_semibold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginStart="9dp"
                    android:textColor="@color/black"
                    android:text="Toltal : "
                    android:textSize="19sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView0" />

                <TextView
                    android:id="@+id/priceTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/textHeading2"
                    android:layout_marginStart="51dp"
                    android:text="295,00"
                    android:textSize="19sp"
                    app:layout_constraintStart_toEndOf="@+id/textView1"
                    app:layout_constraintTop_toBottomOf="@+id/livraisonPrice" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textHeading2"
                    android:layout_marginStart="5dp"
                    android:text="@string/mad"
                    android:textSize="19sp"
                    android:fontFamily="@font/poppins_bold"/>

            </LinearLayout>




        </LinearLayout>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>